manifests/customers-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic-customers-service-deployment
  labels:
    app: spring-petclinic-customers-service-deployment
  namespace: spring-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-petclinic-customers-service-pod
  template:
    metadata:
      name: spring-petclinic-customers-service-pod
      labels:
        app: spring-petclinic-customers-service-pod
    spec:
      containers:
      - name: spring-petclinic-customers-service-pod
        image: tienminhktvn2/spring-petclinic-customers-service
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic-customers-service-service
  namespace: spring-petclinic
spec:
  selector:
    app: spring-petclinic-customers-service-pod
  ports:
  - name: spring-petclinic-customers-service-port
    protocol: TCP
    port: 8081
    targetPort: 8081
