manifests/tracing-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic-tracing-server-deployment
  labels:
    app: spring-petclinic-tracing-server-deployment
  namespace: spring-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-petclinic-tracing-server-pod
  template:
    metadata:
      name: spring-petclinic-tracing-server-pod
      labels:
        app: spring-petclinic-tracing-server-pod
    spec:
      containers:
      - name: spring-petclinic-tracing-server-pod
        image: openzipkin/zipkin
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9411
---
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic-tracing-server-service
  namespace: spring-petclinic
spec:
  selector:
    app: spring-petclinic-tracing-server-pod
  ports:
  - name: spring-petclinic-tracing-server-port
    protocol: TCP
    port: 9411
    targetPort: 9411
