manifests/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic-api-gateway-deployment
  labels:
    app: spring-petclinic-api-gateway-deployment
  namespace: spring-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-petclinic-api-gateway-pod
  template:
    metadata:
      name: spring-petclinic-api-gateway-pod
      labels:
        app: spring-petclinic-api-gateway-pod
    spec:
      containers:
      - name: spring-petclinic-api-gateway-pod
        image: tienminhktvn2/spring-petclinic-api-gateway
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic-api-gateway-service
  namespace: spring-petclinic
spec:
  selector:
    app: spring-petclinic-api-gateway-pod
  ports:
  - name: spring-petclinic-api-gateway-port
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: {}
  name: spring-petclinic.api-gateway.com
  namespace: spring-petclinic
spec:
  ingressClassName: nginx
  rules:
  - host: spring-petclinic.api-gateway.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-petclinic-api-gateway-service
            port:
              number: 8080
